[NFC] fix typo in label

--- a/ang/inlayfp/InlayFP.html
+++ b/ang/inlayfp/InlayFP.html
@@ -21,7 +21,7 @@
         />
     </div>
 
-    <div crm-ui-field="{name: 'inlayForm.formProcessor', title: ts('Form Procesor name')}">
+    <div crm-ui-field="{name: 'inlayForm.formProcessor', title: ts('Form Processor name')}">
       <select
         crm-ui-select="{allowClear:false, dropdownAutoWidth: true}"
         ng-model="inlay.config.formProcessor"
